2025-03-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Imports, LinkingTo): Increase versioned depends on
	Rcpp to the already three-year old 1.0.8 release

2024-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Simplify to r-ci with included bootstrap

2024-12-18  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.11

	* .Rbuildignore: Added inst/tinytest/test_simple.R

2024-12-02  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): Release 0.3.10

2024-08-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to r-ci-setup actions

2024-06-12  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Add DOI badge

2024-05-16  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2023-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4

2023-09-14  Dirk Eddelbuettel  <edd@debian.org>

	* docs/*: Updated

2023-09-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (convertToTime): Warn if NA values resulting from
	conversion to character (and only one warning will be give)
	* R/anytime.R: Updated docs
	* man/anytime.Rd: Idem

2023-09-09  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tinytest.R: Simplified

2023-04-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: Delete unneeded filed
	* src/Makevars.win: Idem

2023-02-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars: No longer set a C++ standard
	* src/Makevars.win: Idem

2023-02-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* src/Makevars (CXX_STD): Set C++ standard to C++17
	* src/Makevars.win (CXX_STD): Idem

	* src/anytime.cpp: Set include header to Rcpp/Lightest

	* inst/NEWS.Rd: Update NEWS.Rd
